fix(modal): support context properly
A possible use of modal inside a different context container than body was not properly implemented.

Fetch/Hide/Restore of scrollbar did not work
Positioning of the modal inside a scrolling container also broke
Accidently usage of window or document as context setting broke the code
What i also fixed

many preset/cached variables were not reused, which slightly costs performance
used the slightly quicker array Access instead of jquerys .get() method
Removed unnecessary !important settings (those were infact needed in case the context container has scrolled when the modal is opened (when testing this, you should have to change .ui.dimmer {top:0!important} to .ui.dimmer {top:0} in the jsfiddle via console)

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -447,6 +447,10 @@
     justify-content: flex-start;
     position: fixed;
   }
+  .scrolling.dimmable:not(body) > .dimmer {
+    justify-content: center;
+    position: absolute;
+  }
   .scrolling.dimmable.dimmed > .dimmer {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
